<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_add__origin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="skyline.skyline1.act_add_Country"
    tools:showIn="@layout/add__origin_act">

    <TextView
        android:text="@string/addOriginTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:id="@+id/addOriginTitle"
        android:layout_alignParentEnd="true"
        android:textSize="36sp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_below="@+id/addOriginTitle"
        android:layout_alignParentStart="true"
        android:layout_marginTop="33dp"
        android:id="@+id/inputNewOrigin"
        android:layout_alignParentEnd="true"
        android:hint="@string/typeOrigin" />

    <Button
        android:text="@string/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/inputNewOrigin"
        android:layout_alignParentEnd="true"
        android:id="@+id/saveButton"
        android:background="@color/cast_expanded_controller_ad_label_background_color"
        android:onClick="onClickSaveOrigin" />

</RelativeLayout>
