<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="skyline.skyline1.RecipeView"
    tools:showIn="@layout/view_act">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <TextView
                android:text="@string/title_activity_recipe_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/recipe_view_title"
                android:textAppearance="@android:style/TextAppearance.Material.Large"
                android:layout_marginStart="25dp" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:baselineAligned="false"
            android:id="@+id/linearLayout"
            android:layout_marginTop="50dp">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="25dp">

                <TextView
                    android:text="@string/recipe_view_prep"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/recipe_view_text_preptime"
                    android:textAppearance="@android:style/TextAppearance.Material.Medium"
                    android:layout_marginTop="20dp" />

                <TextView
                    android:text="@string/recipe_view_cook"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/recipe_view_text_cooktime"
                    android:textAppearance="@android:style/TextAppearance.Material.Medium" />

                <TextView
                    android:text="@string/recipe_view_category"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/recipe_view_text_category"
                    android:textAppearance="@android:style/TextAppearance.Material.Medium" />

                <TextView
                    android:text="@string/recipe_view_origin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/recipe_view_text_origin"
                    android:textAppearance="@android:style/TextAppearance.Material.Medium" />

                <TextView
                    android:text="@string/ingredients"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/recipe_view_text_ingredients"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_weight="1">

                <TextView
                    android:text="20min"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/recipe_view_value_preptime"
                    android:textAppearance="@android:style/TextAppearance.Material.Medium"
                    android:layout_marginTop="20dp" />

                <TextView
                    android:text="20min"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/recipe_view_value_cooktime"
                    android:textAppearance="@android:style/TextAppearance.Material.Medium" />

                <TextView
                    android:text="Viet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/recipe_view_value_category"
                    android:textAppearance="@android:style/TextAppearance.Material.Medium" />

                <TextView
                    android:text="Hull"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/recipe_view_value_origin"
                    android:textAppearance="@android:style/TextAppearance.Material.Medium" />

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical" >

                        <TextView
                            android:text="TextView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/recipe_value_text_ingredients"
                            android:textSize="18sp" />
                    </LinearLayout>
                </ScrollView>

            </LinearLayout>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_below="@+id/linearLayout"
            android:layout_alignParentStart="true">

            <TextView
                android:text="@string/large_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView10" />
        </RelativeLayout>

    </RelativeLayout>




</android.support.v4.widget.NestedScrollView>
